# internationalization-rs

./: .travis.yml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
locales/: test.json
src/: lib.rs
src/i18n/: mod.rs
