[package]
name = "internationalization"
version = "0.0.0"
authors = ["Terry Raimondo <terry.raimondo@gmail.com>"]
edition = "2018"
description = "Easy to use I18n"
keywords = ["i18n", "internationalization"]
license = "MIT/Apache-2.0"
repository = "https://github.com/terry90/internationalization-rs"
homepage = "https://github.com/terry90/internationalization-rs"

[dependencies]
lazy_static = "1.4.0"
glob = "0.3.0"
serde_json = "1.0.40"
