[package]
name = "internationalization"
version = "0.0.2"
authors = ["Terry Raimondo <terry.raimondo@gmail.com>"]
edition = "2018"
description = "Easy to use I18n"
keywords = ["i18n", "internationalization"]
license = "MIT/Apache-2.0"
repository = "https://github.com/terry90/internationalization-rs"
homepage = "https://github.com/terry90/internationalization-rs"
build = "build.rs"

[build-dependencies]
glob = "0.3.0"
quote = "1.0.2"
serde_json = "1.0.41"
proc-macro2 = "1.0"