[package]
name = "internationalization"
version = "0.0.3"
authors = ["Terry Raimondo <terry.raimondo@gmail.com>"]
edition = "2018"
description = "Easy to use I18n"
keywords = ["i18n", "internationalization", "locales"]
license = "MIT/Apache-2.0"
repository = "https://github.com/terry90/internationalization-rs"
homepage = "https://github.com/terry90/internationalization-rs"
build = "build.rs"

[build-dependencies]
glob = "0.3.0"
quote = "1.0.2"
serde_json = "1.0.41"
proc-macro2 = "1.0"
regex = "1.3.1"
lazy_static = "1.4.0"

[badges]
travis-ci = { repository = "terry90/internationalization-rs" }
coveralls = { repository = "terry90/internationalization-rs", branch = "master", service = "github" }
